Istio-Playground/Traffic/path-based-routing/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapp
spec:
  host: myapp
  subsets:
  - name: v1
    labels:
      version: red
  - name: v2
    labels:
      version: green
  - name: v3
    labels:
      version: blue
