Istio-Playground/Traffic/path-based-routing/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - myapp
  http:
  - match:
    - uri:
        prefix: "/green" # Send all /green to v2 pod (green)
    rewrite:
      uri: "/" # rewrite to / as 'myapp' doesn't have a /green endpoint
    route:
    - destination:
        host: myapp
        subset: v2 
  - match:
    - uri:
        prefix: "/blue" # Send all /blue to v3 pod (blue)
    rewrite:
      uri: "/" # rewrite to / as 'myapp' doesn't have a /blue endpoint
    route:
    - destination:
        host: myapp
        subset: v3 
  - route:
    - destination:
        host: myapp
        subset: v1 # Any other path will be redirected to v1 (red)
